[package]
name = "zkevm-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
bus-mapping = { git = "https://github.com/morphism-labs/zkevm-circuits.git", branch = "v0.3" }
eth-types = { git = "https://github.com/morphism-labs/zkevm-circuits.git", branch = "v0.3" }
zkevm-circuits = { git = "https://github.com/morphism-labs/zkevm-circuits.git", branch = "v0.3", features = ["test-circuits"] }
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
ethers = { version = "0.17.0", features = ["ethers-solc"] }
log = "0.4.14"
env_logger = "0.9"


[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scroll-dev-0220" }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "scroll-dev-0220" }
[patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }
[patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
maingate = { git = "https://github.com/scroll-tech/halo2wrong", branch = "halo2-ecc-snark-verifier-0323" }